Feature: Budget 소유자 확인 메서드 추가